src/style/main.css
/*Fonts*/
@font-face {
    font-family: argon;
    font-weight: normal;
    font-style: normal;
    src:
        url(/fonts/MonaspaceArgonNF-Light.woff) format(woff2),
        url(/fonts/MonaspaceArgonNF-Light.woff) format(woff);
}
@font-face {
    font-family: argon;
    font-weight: bold;
    font-style: normal;
    src:
        url(/fonts/MonaspaceArgonNF-Bold.woff) format(woff2),
        url(/fonts/MonaspaceArgonNF-Bold.woff) format(woff);
}
@font-face {
    font-family: argon;
    font-weight: normal;
    font-style: italic;
    src:
        url(/fonts/MonaspaceArgonNF-LightItalic.woff) format(woff2),
        url(/fonts/MonaspaceArgonNF-LightItalic.woff) format(woff);
}
@font-face {
    font-family: argon;
    font-weight: bold;
    font-style: italic;
    src:
        url(/fonts/MonaspaceArgonNF-BoldItalic.woff) format(woff2),
        url(/fonts/MonaspaceArgonNF-BoldItalic.woff) format(woff);
}
@font-face {
    font-family: xenon;
    src: 
        url(/fonts/MonaspaceXenonNF-ExtraBold.woff) format(woff2),
        url(/fonts/MonaspaceXenonNF-ExtraBold.woff) format(woff);
}

/*Text elements styling*/
.mainHeader {
    width: 100%;
    text-align: center;
    font-family: xenon, 'Lucida Sans', monospace;
    font-size:72px;
}
.mainSubheader {
    width: 100%;
    text-align: center;
    font-family: argon, 'Lucida Sans', monospace;
    font-weight:bold;
    font-size: 42px;
}
h1 {
    font-family: xenon, 'Lucida Sans', monospace;
}
nav a {
    color:aliceblue;
    text-decoration:none;
    width:100%;
    display:block;
    padding:10px 5px 10px;
    background-color:#43404d;
    margin-bottom:3px;
}
nav a:hover {
    color: white;
    background-color: black;
}
article p, article ul, article ol {
    margin-left:50px;
    margin-right:50px;
}
sup {
    font-size: 8px;
}

/*Layout*/
html,body {
    height:100%;
    margin:0;
    font-family: argon, 'Lucida Sans', monospace;
}
body {
    position:relative;
    background-color: #121314;
    color: aliceblue;
    margin: 0;
    min-height: 100vh;
    display:flex;
    flex-direction:column;
}
.notFooter {
    display:flex;
    flex:row nowrap;
    flex:1;
}
aside {
    background-color: #1a1b1c;
    border-right: 3px solid #2a2b2c;
    width:15%;
    overflow-wrap:break-word;
    overflow:hidden;
}
main {
    padding: 10px 20px;
    width: 100%;
    overflow: visible;
}
footer {
    display:block;
    position: relative;
    width: 100%;
    bottom:0;
    margin-bottom:0;
    background-color: #1a1b1c;
    border-top: 3px solid #2a2b2c;
    padding: 5px 20px 10px;
}

